Closed Bug 1330730 Opened 9 years ago Closed 9 years ago

Intermittent test_about_pages.py TestAboutPages.test_back_forward | application crashed [@ mozilla::a11y::ProxyTextChangeEvent(mozilla::a11y::ProxyAccessible *,nsString const &,int,unsigned int,bool,bool)]

Categories

(Core :: Disability Access APIs, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla53
Tracking Status
firefox50 --- unaffected
firefox51 --- unaffected
firefox52 --- unaffected
firefox53 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: tbsaunde)

References

Details

(Keywords: intermittent-failure, Whiteboard: [stockwell fixed])

Attachments

(2 files)

Trevor, David, do you know what could have caused this ?
Flags: needinfo?(tbsaunde+mozbugs)
Flags: needinfo?(dbolter)
After bug 1329814 a DocAccessibleParent can be shutdown by the parent process before a content process has started shutting down the document that DocAccessibleParent represents. That means the content processcan send an event from a live document to a DocAccessibleParent that has already been destroyed.
Attachment #8826702 - Flags: review?(bugs)
This shouldn't be necessary because shutting down all the proxies and child documents should already do it, but we might as well be sure.
Attachment #8826709 - Flags: review?(dbolter)
Attachment #8826709 - Flags: review?(dbolter) → review+
Attachment #8826702 - Flags: review?(bugs) → review+
Pushed by tsaunders@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/362ba8c68a29 ignore events delivered to a destroyed DocAccessibleParent r=smaug https://hg.mozilla.org/integration/mozilla-inbound/rev/2b34eb5807f3 make sure mAccessibles and mChildDocs are cleared by DocAccessibleparent::Destroy() r=davidb
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
Flags: needinfo?(tbsaunde+mozbugs)
Assignee: nobody → tbsaunde+mozbugs
Flags: needinfo?(dbolter)
Whiteboard: [stockwell fixed]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: