bug 1330730 - ignore events delivered to a destroyed DocAccessibleParent r=smaug

After bug 1329814 a DocAccessibleParent can be shutdown by the parent process
before a content process has started shutting down the document that
DocAccessibleParent represents.  That means the content processcan send an
event from a live document to a DocAccessibleParent that has already been
destroyed.